preventing overflow-x

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -13,6 +13,7 @@ body {
   min-height: 100vh;
   max-width: 100vw;
   min-width: 20rem;
+  overflow-x: hidden;
 }
 
 main {
@@ -58,7 +59,7 @@ header {
 section {
   display: grid;
   min-width: 18.75rem;
-  max-width: 100rem;
+  max-width: 1350px;
 
   article {
     background-color: $very__light__gray;
